# KubeSend

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml.example  index.yaml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  helm-publish.yaml
charts/kubesend/: Chart.yaml  artifacthub-repo.yml
charts/kubesend/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
helm-charts/: Chart.yaml  values.yaml
helm-charts/kubesend/: Chart.yaml
helm-charts/templates/: configmap.yaml
helm/kubesend/: values.yaml
helm/kubesend/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml
helm/kubesend/templates/tests/: test-connection.yaml
src/: config.rs  main.rs
src/handlers/: message_handler.rs
src/models/: email.rs
src/notification/: mod.rs  smtp_handler.rs
src/services/: email_service.rs
src/utils/: environment.rs  file_helper.rs  mod.rs
